tests/type_check/fail/functions/wrong_return_type_anon_fn_int_to_int.pj
fn (x: Int): Bool do x end
